--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password: password
-  host: 127.0.0.1
+  host: <%= ENV.fetch("RAILS_HOST") { '127.0.0.1' } %>
 
 development:
   <<: *default
