--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,11 @@ jobs:
       - image: circleci/ruby:2.6.5-node-browsers
         environment:
           - BUNDLER_VERSION: 2.0.2
-          - RAILS_ENV: 'development'
+          - RAILS_ENV: 'test'
       # specify the mysql version you desire here
       - image: circleci/mysql:5.7
         environment:
             MYSQL_ROOT_PASSWORD: password
-            MYSQL_DATABASE: htw_development
 
     working_directory: ~/repo
 
@@ -35,6 +34,9 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      # copy yml file
+      - run: mv ./config/database.yml.ci ./config/database.yml
 
       # Database setup
       - run: bundle exec rake db:create
