--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             RAILS_ENV: test
             DB_HOST: 127.0.0.1
             DB_USERNAME: 'root'
-            DB_PASSWORD: 'password'
+            DB_PASSWORD: ''
 
     working_directory: ~/repo
 
